[gd_scene load_steps=17 format=3 uid="uid://baq13tim2y7vx"]

[ext_resource type="Script" uid="uid://dojpr158axq4j" path="res://Game/Win+Lose Screens/end_screen.gd" id="1_35kdd"]
[ext_resource type="Texture2D" uid="uid://c4ubn6l4juvgw" path="res://Assets/Screen/End_screen_win.png" id="1_ijouu"]
[ext_resource type="Script" uid="uid://d0mmq2inlb2s1" path="res://Scripts/TextureSpritesFrames/texture_sprite_frames.gd" id="3_35kdd"]
[ext_resource type="Texture2D" uid="uid://hgra00luu0ne" path="res://Assets/Screen/End_screen_loss.png" id="4_jblwx"]
[ext_resource type="PackedScene" uid="uid://bvcy6tqectio2" path="res://Menus/Credits.tscn" id="5_jblwx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jblwx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qdgdq"]
atlas = ExtResource("4_jblwx")
region = Rect2(0, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk8ji"]
atlas = ExtResource("1_ijouu")
region = Rect2(0, 0, 1152, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_wg76y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdgdq")
}],
"loop": true,
"name": &"lose",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk8ji")
}],
"loop": true,
"name": &"win",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qdgdq"]
resource_name = "CreditsFadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Credits:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wg76y"]
resource_name = "CreditsFadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Credits:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/EndScreenImage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5667v"]
resource_name = "EndScreenFadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/EndScreenImage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uk8ji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Credits:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/EndScreenImage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jblwx"]
resource_name = "FullEndSceneFadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Credits:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/EndScreenImage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wg76y"]
_data = {
&"CreditsFadeIn": SubResource("Animation_qdgdq"),
&"CreditsFadeOut": SubResource("Animation_wg76y"),
&"EndScreenFadeIn": SubResource("Animation_5667v"),
&"FullEndSceneFadeOut": SubResource("Animation_jblwx"),
&"RESET": SubResource("Animation_uk8ji")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_5667v"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35kdd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jblwx")

[node name="EndScreenImage" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
texture = SubResource("AtlasTexture_qdgdq")
script = ExtResource("3_35kdd")
sprite_frames = SubResource("SpriteFrames_wg76y")
current_animation = &"lose"
metadata/_custom_type_script = "uid://d0mmq2inlb2s1"

[node name="Credits" parent="." instance=ExtResource("5_jblwx")]
modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 1

[node name="CreditsPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_wg76y")
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.0352941, 0.0392157, 0.0784314, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("CanvasTexture_5667v")

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="DelayTimer" to="." method="_start_credits"]
